# Projet_NLP

./: app.py  requirements.txt
projet10_recommandation/: README.md  app.py  data.py  evaluation.py  profiling.py  recommend.py  requirements.txt
projet1_ner/: README.md  app.py  evaluate.py  train_ner.py
projet2_vectorisation/: README.md  app.py  corpus_sample.py  preprocessing.py  requirements.txt  scraper.py  similarity.py  vectorizers.py
projet3_topic_modeling/: README.md  app.py  corpus.py  interpretation.py  preprocessing.py  requirements.txt  topic_models.py
projet4_sentiment/: .gitignore  Dockerfile  README.md  app.py  corpus.py  evaluation.py  lexical_approach.py  neural_approach.py  preprocessing.py  pyproject.toml  requirements.txt  statistical_approach.py  train.py
projet4_sentiment/.streamlit/: config.toml
projet4_sentiment/data/: dataset.csv  dataset_synthetique.csv  lexicon_fr.csv
projet4_sentiment/models/: metadata.json  statistical_model_LogisticRegression.joblib  statistical_model_NaiveBayes.joblib  statistical_model_SVM.joblib
projet4_sentiment/scripts/: benchmark_augmentation.py  collect_reviews.py  generate_synthetic_dataset.py  train_neural.py
projet4_sentiment/src/sentiment_analysis/: __init__.py  config.py  data_loader.py  evaluation.py  lexical.py  logging_config.py  neural.py  pipeline.py  preprocessing.py  scraper.py  statistical.py  ui_components.py
projet4_sentiment/tests/: conftest.py  test_lexical.py  test_neural.py  test_pipeline.py  test_preprocessing.py  test_statistical.py
projet5_classification/: README.md  app.py  (+5 more)
(+46 files in other folders)
