[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analysis"
version = "1.0.0"
description = "Analyse de sentiment comparative (lexicale, statistique, neuronale) - Projet 4 M1 FDIA"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "streamlit>=1.30",
]

[project.optional-dependencies]
neural = ["transformers>=4.38", "torch>=2.2", "datasets>=2.18"]
lemmatization = ["spacy>=3.8,<3.9"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
